Fixed alignment on Menu page to reflect both About and Events pages.

--- a/RB test webpage/RB Menu.css
+++ b/RB test webpage/RB Menu.css
@@ -8,7 +8,7 @@ body {
     background-color: black;
     text-align: center;
     margin: 0 auto;
-    width: 1000px;
+    width: 1200px;
 }
 
 .banner {
@@ -31,7 +31,9 @@ a:visited{
 }
 
 .menu img{
-    padding: 64px 32px 0;
+    height: 900px;
+    width: 350px;
+    padding: 64px 100px 64px;
 }
 
 #bar_name ul {
